--- a/javascript/assets/css/mouse.css
+++ b/javascript/assets/css/mouse.css
@@ -131,6 +131,9 @@ li {
   background: rgba(69, 71, 100, 0.321);
   border-radius: 20px;
 }
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 
 /* layout */
 #header {
