--- a/PF/css/style.css
+++ b/PF/css/style.css
@@ -1,355 +1,430 @@
-/* @charset= "UTF-8"; */
 @import url("https://webfontworld.github.io/gmarket/GmarketSans.css");
 * {
-  margin: 0 auto;
-  padding: 0;
-  list-style: none;
-  font-family: "GmarketSans";
-  color: #333333;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-family: "GmarketSans";
+    color: #333333;
 }
+
 body {
-  width: 1920px;
-  height: 5000px;
+    /* width: 1920px;
+    height: 5000px; */
 }
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
-#wrap {
+.container {
+    width: 1280px;
+    margin: 0 auto;
 }
+
 /* header */
 #header {
-  width: 1280px;
-  height: 110px;
+    height: 110px;
 }
-#header .logo {
-  float: left;
-  width: 25%;
-  height: 60px;
-  padding-top: 50px;
-  font-size: 32px;
-  font-weight: bold;
-  background-color: #eee;
-  letter-spacing: 6px;
+.container .logo {
+    float: left;
+    width: 25%;
+    height: 60px;
+    padding-top: 50px;
+    font-size: 32px;
+    font-weight: bold;
+    letter-spacing: 6px;
 }
 .logo a {
 }
-#header .menu {
-  float: right;
-  width: 75%;
-  height: 110px;
-  /* padding: 10px; */
-  background-color: #ddd;
+.container .menu {
+    float: right;
+    width: 75%;
+    height: 110px;
+    /* padding: 10px; */
 }
 .menu1 {
-  float: right;
-  width: 45%;
-  height: 30px;
-  font-size: 14px;
-  font-weight: 300;
-  background-color: #ccc;
-  padding-top: 10px;
+    float: right;
+    width: 45%;
+    height: 30px;
+    font-size: 14px;
+    font-weight: 300;
+    padding-top: 10px;
 }
 .menu1 > li {
-  float: left;
+    float: left;
 }
 .menu1 > li > a {
-  width: 150px;
-  height: 30px;
-  line-height: 30px;
-  text-align: center;
-  padding-left: 17px;
+    width: 150px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    padding-left: 17px;
 }
 .menu2 {
-  float: left;
-  width: 80%;
-  height: 60px;
-  font-size: 15px;
-  font-weight: 300;
-  background-color: #eee;
-  padding-top: 10px;
+    float: left;
+    width: 80%;
+    height: 60px;
+    font-size: 15px;
+    font-weight: 300;
+    padding-top: 10px;
 }
 .menu2 > li {
-  float: left;
-  width: 78px;
+    float: left;
+    width: 78px;
 }
 .menu2 > li > a {
-  width: 100%;
-  height: 80px;
-  line-height: 80px;
-  text-align: center;
+    width: 100%;
+    height: 80px;
+    line-height: 80px;
+    text-align: center;
 }
 .menu2 > li:last-child {
-  width: 135px;
+    width: 135px;
 }
 .menu2 > li > a:first-child {
-  padding-left: 20px;
+    padding-left: 20px;
 }
 .icon_3 {
-  float: right;
-  width: 20%;
-  height: 70px;
-  padding-top: 10px;
+    float: right;
+    width: 20%;
+    height: 70px;
+    padding-top: 10px;
 }
 .icon_3 > li {
-  float: left;
-  width: 30%;
+    float: left;
+    width: 30%;
 }
 .icon_3 > li > a {
-  width: 100%;
-  height: 80px;
-  line-height: 80px;
-  text-align: center;
+    width: 100%;
+    height: 80px;
+    line-height: 80px;
+    text-align: center;
 }
 .icon_3 > li > a:first-child {
-  padding-left: 50px;
+    padding-left: 50px;
 }
-/* section */
-#section {
+/* contents */
+#contents {
 }
-/* content1 */
-#section .content1 {
+/* section1 */
+#section1 {
 }
 .slide {
-  width: 1920px;
-  height: 490px;
-  background-color: #ccc;
+    height: 490px;
+}
+/* section2 */
+#section2 {
 }
 .icon_btn {
-  width: 1280px;
-  height: 265px;
-  background-color: #ffffff;
+    width: 100%;
+    height: 265px;
 }
 .icon_btn_top {
-  padding-top: 60px;
-  padding-bottom: 15px;
+    padding-top: 60px;
+    padding-bottom: 15px;
+    text-align: center;
 }
 .icon_btn_top img {
-  padding-right: 9.9px;
+    margin-right: 8.95px;
 }
 .icon_btn_top img:last-child {
-  padding: 0;
+    padding: 0;
 }
 .icon_btn_bottom {
-  float: left;
-  width: 1280px;
+    float: left;
+    width: 100%;
 }
 .icon_btn_bottom > li {
-  float: left;
-  width: 10%;
-  height: 15px;
-  line-height: 15px;
-  text-align: center;
+    float: left;
+    width: 10%;
+    height: 15px;
+    line-height: 15px;
+    text-align: center;
 }
 .icon_btn_bottom > li > a {
-  font-size: 15px;
-  font-weight: 300;
+    font-size: 15px;
+    font-weight: 300;
+}
+.icon_btn_bottom > li > a:first-child {
+    padding-right: 35px;
+}
+.icon_btn_bottom > li > a:last-child {
+    padding-left: 35px;
 }
 
 .banner {
-  width: 1280px;
-  height: 70px;
+    width: 1280px;
+    height: 70px;
 }
-/* content2 */
-#section .content2 {
+/* section3 */
+#section3 {
 }
 .mealkit {
-  width: 1280px;
-  height: 920px;
-  background-color: #ccc;
+    height: 920px;
 }
 .mealkit > h2 {
-  font-size: 32px;
-  padding-top: 80px;
-  float: left;
+    font-size: 32px;
+    padding-top: 80px;
+    float: left;
 }
 .mealkit > span {
-  font-size: 20px;
-  font-weight: 400;
-  padding-top: 90px;
-  float: right;
-  padding-right: 870px;
+    font-size: 20px;
+    font-weight: 400;
+    padding-top: 90px;
+    float: right;
+    padding-right: 870px;
 }
 .kitimg {
-  float: left;
-  padding-top: 30px;
+    float: left;
+    padding-top: 30px;
+}
+.kit_txt {
+    font-size: 25px;
+    position: relative;
+}
+.kit_t1 {
+    position: absolute;
+    color: #fff;
+    top: 495px;
+    left: 180px;
+}
+.kit_t2 {
+    position: absolute;
+    color: #fff;
+    top: 495px;
+    left: 980px;
+}
+.kit_t3 {
+    position: absolute;
+    color: #fff;
+    top: 895px;
+    left: 180px;
+}
+.kit_t4 {
+    position: absolute;
+    color: #fff;
+    top: 895px;
+    left: 970px;
 }
 .mealkit img {
-  width: 630px;
-  height: 378px;
-  padding-bottom: 15px;
+    width: 630px;
+    height: 378px;
+    padding-bottom: 15px;
 }
 .mealkit img:first-child {
-  padding-right: 15px;
+    padding-right: 15px;
 }
 .mealkit img:last-child {
-  padding-left: 15px;
+    padding-left: 15px;
+}
+/* section4 */
+#section4 {
 }
 .todayfood {
-  width: 1280px;
-  height: 495px;
-  background-color: #ddd;
+    height: 495px;
 }
 .todayfood h2 {
-  font-size: 25px;
-  padding-top: 70px;
-  padding-bottom: 20px;
+    font-size: 25px;
+    padding-top: 70px;
+    padding-bottom: 20px;
 }
 .todayfood .food1 {
-  float: left;
-  padding: 7px;
+    float: left;
+    padding: 7px;
 }
 .todayfood .food2 {
-  float: left;
-  padding: 7px;
+    float: left;
+    padding: 7px;
 }
 .todayfood .food3 {
-  float: left;
-  padding: 7px;
+    float: left;
+    padding: 7px;
 }
 .todayfood .food4 {
-  float: left;
-  padding: 7px;
+    float: left;
+    padding: 7px;
 }
 .todayfood img {
-  width: 306px;
-  height: 306px;
+    width: 306px;
+    height: 306px;
 }
 .food_txt {
-  font-size: 20px;
-  font-weight: bold;
-  padding-top: 10px;
-  padding-bottom: 7px;
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-bottom: 7px;
 }
 .todayfood > p {
-  font-size: 15px;
+    font-size: 15px;
+}
+/* section5 */
+#section5 {
 }
 .review {
-  width: 1280px;
-  height: 590px;
-  background-color: #ccc;
+    height: 590px;
 }
 .review > h2 {
-  padding-top: 100px;
-  padding-bottom: 20px;
-  font-size: 25px;
+    padding-top: 100px;
+    padding-bottom: 20px;
+    font-size: 25px;
 }
 .review img {
-  width: 306px;
-  height: 306px;
+    width: 306px;
+    height: 306px;
 }
 .review1 {
-  float: left;
-  width: 306px;
-  padding: 7px;
+    float: left;
+    width: 306px;
+    padding: 7px;
 }
 .review2 {
-  float: left;
-  width: 306px;
-  padding: 7px;
+    float: left;
+    width: 306px;
+    padding: 7px;
 }
 .review3 {
-  float: left;
-  width: 306px;
-  padding: 7px;
+    float: left;
+    width: 306px;
+    padding: 7px;
 }
 .review4 {
-  float: left;
-  width: 306px;
-  padding: 7px;
+    float: left;
+    width: 306px;
+    padding: 7px;
 }
 .review_txt {
-  font-size: 22px;
+    font-size: 22px;
+    line-height: 1.4;
 }
-.review > p {
-  font-size: 15px;
+.review_desc {
+    font-size: 15px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    line-height: 1.4;
 }
-
+.date {
+    font-size: 15px;
+    color: #bbbb;
+    line-height: 1.4;
+}
+/* section6 */
+#section6 {
+}
 .howto {
-  width: 1280px;
-  height: 735px;
-  background-color: #ddd;
-  text-align: center;
+    height: 735px;
+    text-align: center;
 }
 .howto > h2 {
-  padding-top: 110px;
-  padding-bottom: 20px;
-  font-size: 30px;
+    padding-top: 110px;
+    padding-bottom: 20px;
+    font-size: 30px;
 }
 .howto > p {
-  padding-bottom: 45px;
-  font-size: 18px;
+    padding-bottom: 45px;
+    font-size: 18px;
 }
 .ad1 {
 }
 .ad1 img {
-  width: 630px;
-  height: 355px;
-  padding: 3.6px;
+    width: 630px;
+    height: 355px;
+    padding: 3.6px;
 }
 .ad2 {
-  padding-top: 10px;
+    padding-top: 10px;
+    position: relative;
 }
 .ad2 img {
-  width: 413px;
-  height: 120px;
-  padding: 5.3px 5.3px 0 5.3px;
+    width: 413px;
+    height: 120px;
+    padding: 5.3px 5.3px 0 5.3px;
 }
-
+.ad2_txt {
+    font-size: 18px;
+}
+.ad2_txt span {
+    font-size: 15px;
+}
+.ad2_t1 {
+    position: absolute;
+    top: 3608px;
+    left: 480px;
+    z-index: 1;
+    float: left;
+}
+.ad2_t2 {
+    position: absolute;
+    top: 3600px;
+    left: 910px;
+    z-index: 1;
+    float: left;
+    text-align: left;
+}
+.ad2_t3 {
+    position: absolute;
+    top: 3600px;
+    left: 1335px;
+    z-index: 1;
+    float: left;
+    text-align: left;
+}
+/* section7 */
+#section7 {
+}
 .place {
-  width: 1280px;
-  height: 455px;
-  background-color: #ccc;
-  text-align: center;
+    height: 455px;
+    text-align: center;
 }
 .place > h2 {
-  font-size: 30px;
-  padding-top: 150px;
-  padding-bottom: 18px;
+    font-size: 30px;
+    padding-top: 150px;
+    padding-bottom: 18px;
 }
 .place > p {
-  font-size: 17px;
-  padding-bottom: 40px;
+    font-size: 17px;
+    padding-bottom: 40px;
 }
 .place img {
-  float: left;
-  width: 122px;
-  height: 122px;
-  padding: 3px;
+    float: left;
+    width: 122px;
+    height: 122px;
+    padding: 3px;
+    padding-bottom: 10px;
 }
 .place1 {
-  float: left;
+    float: left;
 }
 .place2 {
-  float: left;
+    float: left;
 }
 .place3 {
-  float: left;
+    float: left;
 }
 .place4 {
-  float: left;
+    float: left;
 }
 .place5 {
-  float: left;
+    float: left;
 }
 .place6 {
-  float: left;
+    float: left;
 }
 .place7 {
-  float: left;
+    float: left;
 }
 .place8 {
-  float: left;
+    float: left;
 }
 .place9 {
-  float: left;
+    float: left;
 }
 .place10 {
-  float: left;
+    float: left;
 }
 
 /* footer */
 #footer {
-  width: 1920px;
-  height: 400px;
-  background-color: rgb(91, 89, 89);
+    height: 400px;
+    background-color: rgb(91, 89, 89);
 }
