--- a/PF/css/style.css
+++ b/PF/css/style.css
@@ -18,6 +18,21 @@ a {
     width: 1280px;
     margin: 0 auto;
 }
+/* 클리어 픽스 */
+.clearfix {
+    zoom: 1;
+}
+
+.clearfix::before,
+.clearfix::after {
+    content: "";
+    display: block;
+    line-height: 0;
+}
+
+.clearfix::after {
+    clear: both;
+}
 
 /* header */
 #header {
@@ -110,6 +125,9 @@ a {
 .slide {
     height: 490px;
 }
+.slide img {
+    width: 100%;
+}
 /* section2 */
 #section2 {
 }
@@ -150,9 +168,8 @@ a {
     padding-left: 35px;
 }
 
-.banner {
-    width: 1280px;
-    height: 70px;
+.banner img {
+    width: 100%;
 }
 /* section3 */
 #section3 {
@@ -427,4 +444,43 @@ a {
 #footer {
     height: 400px;
     background-color: rgb(91, 89, 89);
+}
+#footer div ul li {
+    color: #fff;
+}
+#footer div p {
+    color: #fff;
+}
+.footer_top {
+    width: 100%;
+    height: 213px;
+    padding: 40px;
+}
+.box1 {
+    width: 20%;
+    float: left;
+}
+.box2 {
+    width: 20%;
+    float: left;
+}
+.box3 {
+    width: 20%;
+    float: left;
+}
+.box4 {
+    width: 20%;
+    float: left;
+}
+.box5 {
+    width: 20%;
+    float: left;
+}
+.footer_bottom {
+}
+
+@media (max-width: 1200px) {
+    .container {
+        width: 100%;
+    }
 }
