--- a/PF/css/style.css
+++ b/PF/css/style.css
@@ -1,280 +1,278 @@
 @import url("https://webfontworld.github.io/gmarket/GmarketSans.css");
 * {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    font-family: "GmarketSans";
-    color: #333333;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-family: "GmarketSans";
+  color: #333333;
 }
 
 body {
-   width: 100%;
-   height:auto;
-   overflow-x: hidden;
+  width: 100%;
+  height: auto;
+  overflow-x: hidden;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .container {
-    width: 1280px;
-    margin: 0 auto;
+  width: 1280px;
+  margin: 0 auto;
 }
 /* 클리어 픽스 */
 .clearfix {
-    zoom: 1;
+  zoom: 1;
 }
 
 .clearfix::before,
 .clearfix::after {
-    content: "";
-    display: block;
-    line-height: 0;
+  content: "";
+  display: block;
+  line-height: 0;
 }
 /* header */
 #header {
-    width: 100%;
-    height: 110px;
+  width: 100%;
+  height: 110px;
 }
 .container .logo {
-    float: left;
-    width: 25%;
-    height: 60px;
-    padding-top: 50px;
-    font-size: 32px;
-    font-weight: bold;
-    letter-spacing: 6px;
+  float: left;
+  width: 25%;
+  height: 60px;
+  padding-top: 50px;
+  font-size: 32px;
+  font-weight: bold;
+  letter-spacing: 6px;
 }
 .logo a {
 }
 .container .menu {
-    float: right;
-    width: 75%;
-    height: 110px;
-    /* padding: 10px; */
+  float: right;
+  width: 75%;
+  height: 110px;
+  /* padding: 10px; */
 }
 .menu1 {
-    float: right;
-    width: 45%;
-    height: 30px;
-    font-size: 14px;
-    font-weight: 300;
-    padding-top: 10px;
+  float: right;
+  width: 45%;
+  height: 30px;
+  font-size: 14px;
+  font-weight: 300;
+  padding-top: 10px;
 }
 .menu1 > li {
-    float: left;
+  float: left;
 }
 .menu1 > li > a {
-    width: 150px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    padding-left: 17px;
+  width: 150px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  padding-left: 17px;
 }
 .menu2 {
-    float: left;
-    width: 80%;
-    height: 60px;
-    font-size: 15px;
-    font-weight: 300;
-    padding-top: 10px;
+  float: left;
+  width: 80%;
+  height: 60px;
+  font-size: 15px;
+  font-weight: 300;
+  padding-top: 10px;
 }
 .menu2 > li {
-    float: left;
-    width: 78px;
+  float: left;
+  width: 78px;
 }
 .menu2 > li > a {
-    width: 100%;
-    height: 80px;
-    line-height: 80px;
-    text-align: center;
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
 }
 .menu2 > li:last-child {
-    width: 135px;
+  width: 135px;
 }
 .menu2 > li > a:first-child {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 .icon_3 {
-    float: right;
-    width: 20%;
-    height: 70px;
-    padding-top: 10px;
+  float: right;
+  width: 20%;
+  height: 70px;
+  padding-top: 10px;
 }
 .icon_3 > li {
-    float: left;
-    width: 30%;
+  float: left;
+  width: 30%;
 }
 .icon_3 > li > a {
-    width: 100%;
-    height: 80px;
-    line-height: 80px;
-    text-align: center;
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
 }
 .icon_3 > li > a:first-child {
-    padding-left: 50px;
+  padding-left: 50px;
 }
 
 /* section1 */
 #contents {
-    text-align: center;
+  text-align: center;
 }
 #section1 {
-    width: 100%;
-    height: 490px;
+  width: 100%;
+  height: 490px;
 }
 .slide {
-    width: 100%;
-    height: 490px;
+  width: 100%;
+  height: 490px;
 }
 .slide img {
-    width: 100%;
+  width: 100%;
 }
 /* section2 */
 #section2 {
-    width: 100%;
-    height: 355px;
+  width: 100%;
+  height: 355px;
 }
 .icon_btn {
-    width: 100%;
-    height: 230px;
-    padding-top: 60px;
-   
+  width: 100%;
+  height: 230px;
+  padding-top: 60px;
 }
-.icon_btn li{
-float: left;
-padding-right: 14px;
+.icon_btn li {
+  float: left;
+  padding-right: 14px;
 }
-.icon_btn li:last-child{
-    padding: 0;
+.icon_btn li:last-child {
+  padding: 0;
 }
-.icon_btn li p{
-    padding-top: 10px;
+.icon_btn li p {
+  padding-top: 10px;
 }
 
 .banner {
-    width: 100%;
-    height: 70px;
-    float: left;
+  width: 100%;
+  height: 70px;
+  float: left;
 }
 .banner img {
-    width: 100%;
-  
+  width: 100%;
 }
 /* section3 */
 #section3 {
-    width: 100%;
-    height: 920px;
+  width: 100%;
+  height: 920px;
 }
 .mealkit {
 }
 .mealkit > h2 {
-    font-size: 32px;
-    margin-top: 84px;
-    padding: 30px 30px 30px 0;
-    text-align: left;
+  font-size: 32px;
+  margin-top: 84px;
+  padding: 30px 30px 30px 0;
+  text-align: left;
 }
 .mealkit h2 > span {
-    font-size: 20px;
-    font-weight: 400;
-    padding-top: 90px;
-    text-align: right;
-    padding-left: 50px;
+  font-size: 20px;
+  font-weight: 400;
+  padding-top: 90px;
+  text-align: right;
+  padding-left: 50px;
 }
 .kitimg_wrap1 {
-    width: 100%;
-    height: 384px;
-    margin-bottom: 20px;
-    float: left;
+  width: 100%;
+  height: 384px;
+  margin-bottom: 20px;
+  float: left;
 }
 .kitimg_wrap2 {
-    width: 100%;
-    height: 384px;
-    margin-bottom: 20px;
-    float: left;
+  width: 100%;
+  height: 384px;
+  margin-bottom: 20px;
+  float: left;
 }
 .kitimg {
-    /* margin-bottom: 20px; */
-    width: 630px;
-    height: 378px;
-    float: left;
+  /* margin-bottom: 20px; */
+  width: 630px;
+  height: 378px;
+  float: left;
 }
 .blur1 {
-    position: absolute;
-    top: 210px;
-    left: -1px;
+  position: absolute;
+  top: 210px;
+  left: -1px;
 }
 .blur2 {
-    position: absolute;
-    top: 210px;
-    left: 503px;
+  position: absolute;
+  top: 210px;
+  left: 503px;
 }
 .blur3 {
-    position: absolute;
-    top: 210px;
-    left: -1px;
+  position: absolute;
+  top: 210px;
+  left: -1px;
 }
 .blur4 {
-    position: absolute;
-    top: 210px;
-    left: 506px;
+  position: absolute;
+  top: 210px;
+  left: 506px;
 }
 .kit_1 {
-    width: 49%;
-    position: relative;
-    float: left;
-    margin-right: 2%;
+  width: 49%;
+  position: relative;
+  float: left;
+  margin-right: 2%;
 }
 .kit_2 {
-    width: 49%;
-    position: relative;
-    float: left;
+  width: 49%;
+  position: relative;
+  float: left;
 }
 .kit_3 {
-    width: 49%;
-    position: relative;
-    float: left;
-    margin-right: 2%;
+  width: 49%;
+  position: relative;
+  float: left;
+  margin-right: 2%;
 }
 .kit_4 {
-    width: 49%;
-    position: relative;
-    float: left;
+  width: 49%;
+  position: relative;
+  float: left;
 }
 
 .kit_txt {
 }
 .kit_t1 {
-    position: absolute;
-    font-size: 25px;
-    color: #fff;
-    top: 350px;
-    left: 180px;
-    z-index: 3;
+  position: absolute;
+  font-size: 25px;
+  color: #fff;
+  top: 350px;
+  left: 180px;
+  z-index: 3;
 }
 .kit_t2 {
-    position: absolute;
-    font-size: 25px;
-    color: #fff;
-    top: 350px;
-    left: 375px;
-    z-index: 3;
+  position: absolute;
+  font-size: 25px;
+  color: #fff;
+  top: 350px;
+  left: 375px;
+  z-index: 3;
 }
 .kit_t3 {
-    position: absolute;
-    font-size: 25px;
-    color: #fff;
-    top: 350px;
-    left: 170px;
-    z-index: 3;
+  position: absolute;
+  font-size: 25px;
+  color: #fff;
+  top: 350px;
+  left: 170px;
+  z-index: 3;
 }
 .kit_t4 {
-    position: absolute;
-    font-size: 25px;
-    color: #fff;
-    top: 350px;
-    left: 350px;
-    z-index: 3;
+  position: absolute;
+  font-size: 25px;
+  color: #fff;
+  top: 350px;
+  left: 350px;
+  z-index: 3;
 }
 
 /* .mealkit img:first-child {
@@ -287,362 +285,451 @@ padding-right: 14px;
 #section4 {
 }
 .todayfood {
-    width: 100%;
-    height: 495px;
+  width: 100%;
+  height: 495px;
 }
 .todayfood > h2 {
-    font-size: 25px;
-    padding-top: 70px;
-    padding-bottom: 20px;
-    text-align: left;
+  font-size: 25px;
+  padding-top: 70px;
+  padding-bottom: 20px;
+  text-align: left;
 }
 .todayfood .food1 {
-    float: left;
-    padding: 7px;
+  float: left;
+  padding: 7px;
 }
 .todayfood .food2 {
-    float: left;
-    padding: 7px;
+  float: left;
+  padding: 7px;
 }
 .todayfood .food3 {
-    float: left;
-    padding: 7px;
+  float: left;
+  padding: 7px;
 }
 .todayfood .food4 {
-    float: left;
-    padding: 7px;
+  float: left;
+  padding: 7px;
 }
 .todayfood img {
-    width: 306px;
-    height: 306px;
+  width: 306px;
+  height: 306px;
 }
 .food_txt {
-    font-size: 20px;
-    font-weight: bold;
-    padding-top: 10px;
-    padding-bottom: 7px;
-    text-align: left;
+  font-size: 20px;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-bottom: 7px;
+  text-align: left;
 }
 .food_desc {
-    font-size: 15px;
-    text-align: left;
+  font-size: 15px;
+  text-align: left;
 }
 /* section5 */
 #section5 {
 }
 .review {
-    width: 100%;
-    height: 590px;
+  width: 100%;
+  height: 590px;
 }
 .review > h2 {
-    padding-top: 100px;
-    padding-bottom: 20px;
-    font-size: 25px;
-    text-align: left;
+  padding-top: 100px;
+  padding-bottom: 20px;
+  font-size: 25px;
+  text-align: left;
 }
 .review img {
-    width: 306px;
-    height: 306px;
+  width: 306px;
+  height: 306px;
 }
 .review1 {
-    float: left;
-    width: 306px;
-    padding: 7px;
+  float: left;
+  width: 306px;
+  padding: 7px;
 }
 .review2 {
-    float: left;
-    width: 306px;
-    padding: 7px;
+  float: left;
+  width: 306px;
+  padding: 7px;
 }
 .review3 {
-    float: left;
-    width: 306px;
-    padding: 7px;
+  float: left;
+  width: 306px;
+  padding: 7px;
 }
 .review4 {
-    float: left;
-    width: 306px;
-    padding: 7px;
+  float: left;
+  width: 306px;
+  padding: 7px;
 }
 .review_txt {
-    font-size: 22px;
-    line-height: 1.4;
-    text-align: left;
+  font-size: 22px;
+  line-height: 1.4;
+  text-align: left;
 }
 .review_desc {
-    font-size: 15px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    line-height: 1.4;
+  font-size: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  line-height: 1.4;
 }
 .date {
-    font-size: 15px;
-    color: #bbbb;
-    line-height: 1.4;
-    text-align: left;
+  font-size: 15px;
+  color: #bbbb;
+  line-height: 1.4;
+  text-align: left;
 }
 /* section6 */
 #section6 {
 }
 .howto {
-    width: 100%;
-    height: 735px;
-    text-align: center;
+  width: 100%;
+  height: 735px;
+  text-align: center;
 }
 .howto > h2 {
-    padding-top: 110px;
-    padding-bottom: 20px;
-    font-size: 30px;
+  padding-top: 110px;
+  padding-bottom: 20px;
+  font-size: 30px;
 }
 .howto > p {
-    padding-bottom: 45px;
-    font-size: 18px;
+  padding-bottom: 45px;
+  font-size: 18px;
 }
 .ad1 {
 }
 .ad1 img {
-    width: 630px;
-    height: 355px;
-    padding: 3.6px;
+  width: 630px;
+  height: 355px;
+  padding: 3.6px;
 }
 .ad2 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 .ad2_1 {
-    position: relative;
-    float: left;
-    padding-right: 20px;
+  position: relative;
+  float: left;
+  padding-right: 20px;
 }
 .ad2_1 img {
-    width: 413px;
-    height: 120px;
+  width: 413px;
+  height: 120px;
 }
 .ad2_2 {
-    position: relative;
-    float: left;
-    padding-right: 20px;
+  position: relative;
+  float: left;
+  padding-right: 20px;
 }
 .ad2_2 img {
-    width: 413px;
-    height: 120px;
+  width: 413px;
+  height: 120px;
 }
 .ad2_3 {
-    position: relative;
-    float: left;
+  position: relative;
+  float: left;
 }
 .ad2_3 img {
-    width: 413px;
-    height: 120px;
+  width: 413px;
+  height: 120px;
 }
 .ad2_txt {
-    font-size: 18px;
+  font-size: 18px;
 }
 .ad2_txt span {
-    font-size: 15px;
+  font-size: 15px;
 }
 .ad2_1 .ad2_t1 {
-    position: absolute;
-    top: 60px;
-    left: 170px;
-    z-index: 2;
+  position: absolute;
+  top: 60px;
+  left: 170px;
+  z-index: 2;
 }
 .ad2_2 .ad2_t2 {
-    position: absolute;
-    top: 50px;
-    left: 170px;
-    z-index: 2;
+  position: absolute;
+  top: 50px;
+  left: 170px;
+  z-index: 2;
 
-    text-align: left;
+  text-align: left;
 }
 .ad2_3 .ad2_t3 {
-    position: absolute;
-    top: 50px;
-    left: 170px;
-    z-index: 2;
+  position: absolute;
+  top: 50px;
+  left: 170px;
+  z-index: 2;
 
-    text-align: left;
+  text-align: left;
 }
 /* section7 */
 #section7 {
 }
 .place {
-    width: 100%;
-    height: 455px;
-    text-align: center;
+  width: 100%;
+  height: 455px;
+  text-align: center;
 }
 .place > h2 {
-    font-size: 30px;
-    padding-top: 150px;
-    padding-bottom: 18px;
+  font-size: 30px;
+  padding-top: 150px;
+  padding-bottom: 18px;
 }
 .place > p {
-    font-size: 17px;
-    padding-bottom: 40px;
+  font-size: 17px;
+  padding-bottom: 40px;
 }
 .place img {
-    float: left;
-    width: 122px;
-    height: 122px;
-    padding: 3px;
-    padding-bottom: 10px;
+  float: left;
+  width: 122px;
+  height: 122px;
+  padding: 3px;
+  padding-bottom: 10px;
 }
 .place1 {
-    float: left;
+  float: left;
 }
 .place2 {
-    float: left;
+  float: left;
 }
 .place3 {
-    float: left;
+  float: left;
 }
 .place4 {
-    float: left;
+  float: left;
 }
 .place5 {
-    float: left;
+  float: left;
 }
 .place6 {
-    float: left;
+  float: left;
 }
 .place7 {
-    float: left;
+  float: left;
 }
 .place8 {
-    float: left;
+  float: left;
 }
 .place9 {
-    float: left;
+  float: left;
 }
 .place10 {
-    float: left;
+  float: left;
 }
 
 /* footer */
 #footer {
-    clear: both;
-    height: 400px;
-    font-size: 12px;
-    font-weight: 300;
-    line-height: 2;
-    background-color: rgb(91, 89, 89);
+  clear: both;
+  height: 400px;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 2;
+  background-color: rgb(91, 89, 89);
 }
 #footer div ul li {
-    color: #fff;
+  color: #fff;
 }
 #footer div p {
-    color: #fff;
+  color: #fff;
 }
 #footer div span {
-    color: #fff;
-    font-size: 17px;
-    padding-left: 2px;
+  color: #fff;
+  font-size: 17px;
+  padding-left: 2px;
 }
 .footer_top {
-    width: 100%;
-    height: 213px;
-    padding-top: 40px;
-    text-align: left;
+  width: 100%;
+  height: 213px;
+  padding-top: 40px;
+  text-align: left;
 }
 .box1 {
-    width: 20%;
-    float: left;
+  width: 20%;
+  float: left;
 }
-.box1 >p{
-    font-size: 24px;
-    font-weight: 400;
+.box1 > p {
+  font-size: 24px;
+  font-weight: 400;
 }
 .box2 {
-    width: 20%;
-    float: left;
+  width: 20%;
+  float: left;
 }
 .box3 {
-    width: 20%;
-    float: left;
+  width: 20%;
+  float: left;
 }
 .box4 {
-    width: 20%;
-    float: left;
+  width: 20%;
+  float: left;
 }
-.box4 img{
-    padding-right: 10px;
+.box4 img {
+  padding-right: 10px;
 }
 .box5 {
-    width: 20%;
-    float: left;
+  width: 20%;
+  float: left;
 }
-.box5 ul li:nth-child(2){
-    font-size: 18px;
+.box5 ul li:nth-child(2) {
+  font-size: 18px;
 }
 .footer_bottom {
-    text-align: left;
+  text-align: left;
 }
-@media (max-width: 1280px) {
-    .container {
-        width: 100%;
-        height:auto;
-    }
-    .logo{width: 5%;
-    }
-    .menu{width: 50%;}
-    .menu1{
-        float: right;
-        width: 100%;
-    }
 
-    .slide img{
-    width: 100%;
-    height: auto;
-}
-}
 @media (max-width: 1220px) {
-    .container {
-        width: 100%;
-        height:auto;
-    }
-    .logo{
-        width: 20%;
-    }
-    .logo a{
-   margin-left: 20px;
-    }
-    .menu{width: 100%;}
-    .menu1{
+  .container {
+    width: 96%;
+    height: auto;
+  }
+  .logo {
+    width: 20%;
+  }
+  .logo a {
+    margin-left: 20px;
+  }
+  .menu {
+    width: 100%;
+  }
+  .menu1 {
     float: left;
     width: 100%;
-    }
-    .menu2 {
-        display: none;
-    }
-    .icon_3 {
+  }
+  .menu2 {
+    display: none;
+  }
+  .icon_3 {
     float: left;
     width: 100%;
-    height: 70px; 
-}
-.icon_3 li{
+    height: 70px;
+  }
+  .icon_3 li {
     width: 11%;
-}
-.slide img{
+  }
+  .slide img {
     width: 100%;
     height: auto;
+  }
+
+  /* section2 */
+  #section2 {
+    width: 100%;
+    height: 700px;
+    text-align: center;
+  }
+  .icon_btn {
+    width: 100%;
+  }
+  .icon_btn li {
+    float: left;
+    margin-right: 50px;
+    margin-left: 50px;
+    padding-bottom: 100px;
+  }
+  .icon_btn li:nth-child(1) {
+    padding-left: 50px;
+  }
+  .icon_btn li:nth-child(5) {
+    padding-left: 50px;
+  }
+  .icon_btn li:nth-child(9) {
+    padding-left: 50px;
+  }
+  .icon_btn li:last-child {
+    padding: 0;
+  }
+  .icon_btn li p {
+    padding-top: 10px;
+  }
+  .banner {
+    padding-bottom: 50px;
+  }
+
+  /* section3 */
+  .container {
+    width: 100%;
+    height: auto;
+  }
+  .mealkit > h2 {
+    padding-top: 30px;
+    padding-left: 30px;
+  }
+  .kitimg_wrap1 {
+    width: 92%;
+  }
+  .kitimg_wrap2 {
+    width: 92%;
+  }
 }
 
 @media (max-width: 1024px) {
-    .container {
-        width: 100%;
-    }
+  .container {
+    width: 100%;
+  }
+  /* section2 */
+  #section2 {
+    width: 100%;
+    height: 900px;
+  }
+  .icon_btn {
+    width: 100%;
+    text-align: center;
+  }
+  .icon_btn li {
+    float: left;
+  }
+  .icon_btn li:nth-child(1) {
+    padding-left: 50px;
+  }
+  .icon_btn li:nth-child(2) {
+    padding-left: 50px;
+  }
+  .icon_btn li:nth-child(3) {
+    padding-left: 50px;
+  }
+  .icon_btn li:nth-child(4) {
+    padding-left: 50px;
+  }
+  .icon_btn li:nth-child(6) {
+    padding-left: 50px;
+  }
+  .icon_btn li:nth-child(7) {
+    padding-left: 50px;
+  }
+  .icon_btn li:nth-child(8) {
+    padding-left: 50px;
+  }
+  .icon_btn li:nth-child(10) {
+    padding-left: 50px;
+  }
+
+  .banner {
+    padding-bottom: 50px;
+  }
+  .kitimg_wrap1 {
+    width: 90%;
+    height: auto;
+  }
 }
 
+@media (max-width: 960px) {
+  .container {
+    width: 100%;
+  }
+  #section2 {
+    width: 100%;
+    height: 900px;
+  }
+}
 @media (max-width: 768px) {
-    .container {
-        width: 100%;
-    }
+  .container {
+    width: 100%;
+  }
 }
 
 @media (max-width: 576px) {
-    .container {
-        width: 100%;
-    }
+  .container {
+    width: 100%;
+  }
 }
