--- a/PF/css/style.css
+++ b/PF/css/style.css
@@ -133,20 +133,25 @@ a {
 /* section2 */
 #section2 {
   width: 100%;
-  height: 355px;
+  height: 400px;
 }
 .icon_btn {
   width: 100%;
-  height: 230px;
+  height: 400px;
   padding-top: 60px;
+  text-align: center;
 }
-.icon_btn li {
+.icon_btn ul {
+  height: 400px;
+  align-items: center;
+}
+.icon_btn ul li { 
   float: left;
-  padding-right: 14px;
-}
-.icon_btn li:last-child {
+  padding: 5px;}
+
+/* .icon_btn li:last-child {
   padding: 0;
-}
+} */
 .icon_btn li p {
   padding-top: 10px;
 }
@@ -179,22 +184,18 @@ a {
   text-align: right;
   padding-left: 50px;
 }
-.kitimg_wrap1 {
+.kitimg_wrap {
   width: 100%;
   height: 384px;
   margin-bottom: 20px;
   float: left;
 }
-.kitimg_wrap2 {
-  width: 100%;
-  height: 384px;
-  margin-bottom: 20px;
-  float: left;
-}
+
 .kitimg {
   /* margin-bottom: 20px; */
   width: 630px;
   height: 378px;
+  padding-bottom: 20px;
   float: left;
 }
 .blur1 {
@@ -289,16 +290,20 @@ a {
   height: 495px;
 }
 .todayfood > h2 {
-  font-size: 25px;
-  padding-top: 70px;
+ padding-top: 100px;
   padding-bottom: 20px;
+  font-size: 25px;
   text-align: left;
 }
-.todayfood .food1 {
+.todayfood ul{
+  width: 100%;
+}
+.todayfood ul li {
+  width: 23.7%;
   float: left;
   padding: 7px;
 }
-.todayfood .food2 {
+/* .todayfood .food2 {
   float: left;
   padding: 7px;
 }
@@ -309,10 +314,10 @@ a {
 .todayfood .food4 {
   float: left;
   padding: 7px;
-}
-.todayfood img {
-  width: 306px;
-  height: 306px;
+} */
+.todayfood ul li img {
+ width: 100%;
+ height: auto;
 }
 .food_txt {
   font-size: 20px;
@@ -333,7 +338,7 @@ a {
   height: 590px;
 }
 .review > h2 {
-  padding-top: 100px;
+margin-top: 100px;
   padding-bottom: 20px;
   font-size: 25px;
   text-align: left;
@@ -578,9 +583,9 @@ a {
   text-align: left;
 }
 
-@media (max-width: 1220px) {
+@media (max-width: 1200px) {
   .container {
-    width: 96%;
+    width: 98%;
     height: auto;
   }
   .logo {
@@ -593,19 +598,21 @@ a {
     width: 100%;
   }
   .menu1 {
-    float: left;
     width: 100%;
+    align-items: center;
+  }
+  .menu1 li{
+    width: 15%;
   }
   .menu2 {
     display: none;
   }
   .icon_3 {
-    float: left;
     width: 100%;
-    height: 70px;
+    align-items: center;
   }
   .icon_3 li {
-    width: 11%;
+    width: 33.3%;
   }
   .slide img {
     width: 100%;
@@ -615,121 +622,290 @@ a {
   /* section2 */
   #section2 {
     width: 100%;
-    height: 700px;
+  height: auto;
     text-align: center;
   }
   .icon_btn {
     width: 100%;
+    text-align: center;
   }
-  .icon_btn li {
+  .icon_btn img{
+    width: 100%;
+    height: auto;
+  }
+  .icon_btn ul {
+   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  }
+  .icon_btn ul li {
     float: left;
-    margin-right: 50px;
-    margin-left: 50px;
-    padding-bottom: 100px;
+   margin: 0 50px 0;
   }
-  .icon_btn li:nth-child(1) {
-    padding-left: 50px;
-  }
-  .icon_btn li:nth-child(5) {
-    padding-left: 50px;
-  }
-  .icon_btn li:nth-child(9) {
-    padding-left: 50px;
-  }
-  .icon_btn li:last-child {
-    padding: 0;
-  }
+  
   .icon_btn li p {
     padding-top: 10px;
   }
   .banner {
+    padding-top: 50px;
     padding-bottom: 50px;
   }
 
   /* section3 */
-  .container {
-    width: 100%;
+  #section{
+    height: auto;
+  }
+  .container{
+    height: auto;
+  }
+  .mealkit{
     height: auto;
   }
   .mealkit > h2 {
-    padding-top: 30px;
-    padding-left: 30px;
+ padding: 0 0 30px 30px;
   }
-  .kitimg_wrap1 {
-    width: 92%;
+  .mealkit>span {
+    padding: 0;
   }
-  .kitimg_wrap2 {
-    width: 92%;
+  .kitimg_wrap{
+    width: 100%;
+    height: auto;
   }
+
+.kit_t1{
+  position: absolute;
+  top: 0;left: 0;
+}
+.kit_t2{
+  position: absolute;
+  top: 0;left: 0;
+
+}
+.kit_t3{
+  position: absolute;
+  top: 0;left: 0;
+
+}
+.kit_t4{
+  position: absolute;
+  top: 0;left: 0;
+
 }
 
+.kitimg{
+ max-width:100%;
+ height: auto;
+}
+
+.blur1, .blur2, .blur3, .blur4{
+  display: none;
+}
+/* section4 */
+#section4{
+  width: 100%;
+  height: 495px;
+}
+ .todayfood > h2 {
+
+    padding-left: 30px;
+  }
+  .todayfood{
+    align-items: center;
+  }
+  .todayfood ul{
+       height: auto;
+  }
+.food1, 
+.food2,
+.food3, 
+.food4{
+    width: 26%;
+
+}
+.todayfood img{
+  width: 100%;
+  height: auto;
+}
+
+/* section5 */
+#section5{
+  width: 100%;
+  height: 500px;
+}
+.review> h2{
+ 
+    padding-left: 30px;
+}
+.review{
+  align-items: center;
+
+}
+.review ul{
+     height: auto;
+}
+.review1, 
+.review2,
+.review3, 
+.review4{
+width: 23.7%;
+}
+.review img{
+  width: 100%;
+  height: auto;
+}
+
+/* section6 */
+#section6{
+  width: 100%;
+  height: 1200px;
+}
+.howto{
+     height: auto;
+}
+.ad2{
+  width: 100%;
+  align-items: center;
+}
+.ad2_1,
+.ad2_2,
+.ad2_3{
+ width: 31%;
+ 
+}
+/* section7 */
+
+.place>ul{align-items: center;}
+.place>ul>li{
+  padding: 50px;
+}
+#footer{
+  padding-left: 30px;
+}
+}
+
+
+
+
+
 @media (max-width: 1024px) {
+   .container {
+    width: 98%;
+    height: auto;
+  }
+  /* section2 */
+ #section2 {
+    width: 100%;
+    height: 400px;
+    /* text-align: center; */
+  }
+  .container{
+    height: 400px;
+  }
+  .icon_btn {
+    width: 100%;
+     height: 400px;
+ 
+  }
+   .icon_btn ul{
+   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+   }
+ .icon_btn ul li{
+ margin: 0 30px 0;
+}
+  .banner {
+   padding: 0 0 50px 0;
+  }
+  /* section3 */
+  .kitimg_wrap {
+    width: 100%;
+    height: auto;
+  }
+  /*section4 */
+  #section{
+  width: 100%;
+ height: auto;
+
+  }
+.todayfood >h2{
+  padding: 0 0 0 30px;
+}
+.todayfood{
+  width: 100%;
+ height: auto;
+}
+.todayfood img{
+  width: 100%;
+  height: auto;
+}
+.todayfood ul{
+ width: 100%;
+ height: auto;
+
+}
+.todayfood ul li{
+width: 23.5%;
+}
+
+  /* section5 */
+#section5{
+width: 100%;
+height: auto;
+}
+.review> h2{
+   padding-top: 30px;
+    padding-left: 30px;
+}
+.review{
+  width: 100%;
+  align-items: center;
+
+}
+.review1, 
+.review2,
+.review3, 
+.review4{
+width: 23.3%;
+}
+.review img{
+  width: 100%;
+  height: auto;
+}
+
+/* section7 */
+
+.place>ul{
+  padding-left: 80px;
+ text-align: center;
+}
+.place>ul>li{
+  padding: 15px;
+}
+
+}
+
+/* @media (max-width: 960px) {
   .container {
     width: 100%;
   }
-  /* section2 */
   #section2 {
     width: 100%;
     height: 900px;
   }
-  .icon_btn {
-    width: 100%;
-    text-align: center;
-  }
-  .icon_btn li {
-    float: left;
-  }
-  .icon_btn li:nth-child(1) {
-    padding-left: 50px;
-  }
-  .icon_btn li:nth-child(2) {
-    padding-left: 50px;
-  }
-  .icon_btn li:nth-child(3) {
-    padding-left: 50px;
-  }
-  .icon_btn li:nth-child(4) {
-    padding-left: 50px;
-  }
-  .icon_btn li:nth-child(6) {
-    padding-left: 50px;
-  }
-  .icon_btn li:nth-child(7) {
-    padding-left: 50px;
-  }
-  .icon_btn li:nth-child(8) {
-    padding-left: 50px;
-  }
-  .icon_btn li:nth-child(10) {
-    padding-left: 50px;
-  }
-
-  .banner {
-    padding-bottom: 50px;
-  }
-  .kitimg_wrap1 {
-    width: 90%;
+} */
+@media (max-width: 768px) {
+  .container {
+    width: 98%;
     height: auto;
   }
 }
 
-@media (max-width: 960px) {
-  .container {
-    width: 100%;
-  }
-  #section2 {
-    width: 100%;
-    height: 900px;
-  }
-}
-@media (max-width: 768px) {
-  .container {
-    width: 100%;
-  }
-}
+
 
 @media (max-width: 576px) {
   .container {
-    width: 100%;
+    width: 98%;
+    height: auto;
   }
 }
